fix issue with input text field overlapping mobile nav, change api key

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,7 +10,8 @@ nav {
  height: 115px;
  background: #FEFEFE;
  filter: drop-shadow(0px 3px 25px rgba(102, 112, 133, 0.25));
- z-index: 100;
+  position: relative;
+  z-index: 100;
 }
 
 .navLinks a{
@@ -94,7 +95,7 @@ a.logo{
 
 
   .navbar.fixed {
-    position: fixed;
+    position: sticky;
     width: 100%;
     top: 0;
   }
